# nsfw-image-check-comfyui

./: README.md  README_CN.md  __init__.py  nsfw_image_check.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/: __init__.py  encode.py  image.py
detect/: __init__.py  censor.py
generic/: __init__.py  classify.py  yolo.py
models/: check.py  nsfw_check.py  tensor_to_other.py
models/models--deepghs--anime_furry/: meta.json
models/models--deepghs--anime_rating/: meta.json
modules/: __init__.py  nsfw_check.py  nsfw_cover.py  tensor_to_other.py
utils/: __init__.py  cache.py  onnxruntime.py
validate/: __init__.py  furry.py  nsfw.py  rating.py
