[project]
name = "nsfw-image-check-comfyui"
description = "NODES:Nsfw Image Check or Cover Node, The size and dependency of the library are very small, which reduces the problem of conflicts"
version = "1.1.2"
license = {file = "LICENSE"}
dependencies = ["numpy", "opencv-python", "pillow", "typing", "onnxruntime", "torchvision"]

[project.urls]
Repository = "https://github.com/fallingmeteorite/nsfw-image-check-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "falling"
DisplayName = "nsfw-image-check-comfyui"
Icon = ""
